--- a/App/src/components/LoginPage.css
+++ b/App/src/components/LoginPage.css
@@ -1,9 +1,3 @@
-/* Colors used
-
-    Background - #555163
-    LoginPanelBackground - #232129
-
-*/
 
 .login-container {
     display: flex;
@@ -23,7 +17,6 @@
     box-shadow: 5px 10px 50px 5px #3c3842;
     border-radius: 10px;
     background-color: #232129;
-    /* overflow: hidden; */
 }
 
 .login-left-panel {
@@ -47,7 +40,6 @@
     height: 70%;
     width: 70%;
 
-    /* background-color:white; */
     &>h2 {
         position: absolute;
         top: 0px;
@@ -87,6 +79,15 @@
         &:hover{
             cursor: pointer;
         }
+    }
+
+    & button{
+        background-color:#205295;
+        color:white;
+        border:none;
+        width:50px;
+        height:50px;
+        border-radius:50%;
     }
 }
 
