--- a/App/src/components/Popup.css
+++ b/App/src/components/Popup.css
@@ -1,6 +1,6 @@
 .popup-overlay{
     position:fixed;
-    top:10px;
+    bottom:100px;
     left:10px;
     max-width:300px;
     height:max-content  ;
@@ -8,17 +8,26 @@
     background-color:#205295;
     border-radius:20px;
     color:white;
-
+    /* box-shadow:0px 0px 30px 5px #23212993; */
     & button{
+        position:absolute;
+        top:4px;
+        right:10px;
         font-size:18px;
         border:none;
         background:transparent;
-        color:black;
+        color:#232129;
+        &:hover{
+            cursor:pointer;
+        }
     }
+    z-index:1000;
 }
 
 .popup-content{
-    display:flex;
-    flex-direction:column;
-    gap:1rem;
+    margin-right:12px;
+   & p{
+    font-size:15px;
+   }
 }
+
